drivers/card/K2616_Dll.h

int __stdcall K2616_S70Increment(HANDLE ComHandle, BYTE _Block, BYTE _Data[4]);
int __stdcall K2616_S70Decrement(HANDLE ComHandle, BYTE _Block, BYTE _Data[4]);
int __stdcall K2616_S70Halt(HANDLE ComHandle);
int __stdcall K2616_ULDetectCard(HANDLE ComHandle);
int __stdcall K2616_ULGetCardID(HANDLE ComHandle, BYTE _CardID[7]);
int __stdcall K2616_ULReadBlock(HANDLE ComHandle, BYTE _Block, BYTE _BlockData[16]);
int __stdcall K2616_ULWriteBlock(HANDLE ComHandle, BYTE _Block, BYTE _BlockData[16]);
int __stdcall K2616_ULHalt(HANDLE ComHandle);
int __stdcall K2616_15693GetUid(HANDLE ComHandle,BYTE UID[8]);
int __stdcall K2616_15693ReadData(HANDLE ComHandle,bool bUid,BYTE Uid[8],BYTE BlockAddr, BYTE BlockLen, BYTE _BlockData[],BYTE* ReadBlockLen);
int __stdcall K2616_15693WriteData(HANDLE ComHandle,bool bUid,BYTE Uid[8],BYTE BlockAddr, BYTE BlockLen, BYTE _BlockData[],BYTE *WriteBlockLen);
int __stdcall K2616_15693ChooseCard(HANDLE ComHandle,bool bUid,BYTE Uid[8]);
int __stdcall K2616_15693GetMessage(HANDLE ComHandle,bool bUid,BYTE Uid[8],BYTE Message[15]);
int __stdcall K2616_15693ReadSafeBit(HANDLE ComHandle,bool bUid,BYTE Uid[8],BYTE BlockAddr, BYTE BlockLen,BYTE* ReadBlockLen,BYTE BlockLockStatus[]);
int __stdcall K2616_15693WriteDSFID(HANDLE ComHandle,bool bUid,BYTE Uid[8],BYTE WriteBit);
int __stdcall K2616_15693WriteAFI(HANDLE ComHandle,bool bUid,BYTE Uid[8],BYTE WriteBit);
int __stdcall K2616_15693LockBlock(HANDLE ComHandle,bool bUid,BYTE Uid[8],BYTE LockAddress);
int __stdcall K2616_15693LockAFI(HANDLE ComHandle,bool bUid,BYTE Uid[8]);
int __stdcall K2616_15693LockDSFID(HANDLE ComHandle,bool bUid,BYTE Uid[8]);