apsp-client-sdk/src/test/java/com/zmcsoft/apsp/client/K2616_DllLibrary.java

	/**
	 * Original signature : <code>int K2616_S70Increment(HANDLE, BYTE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:91</i>
	 */
	int K2616_S70Increment(HANDLE ComHandle, byte _Block, ByteBuffer _Data);
	/**
	 * Original signature : <code>int K2616_S70Decrement(HANDLE, BYTE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:92</i><br>
	 * @deprecated use the safer methods {@link #K2616_S70Decrement(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_S70Decrement(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_S70Decrement(HANDLE ComHandle, byte _Block, Pointer _Data);
	/**
	 * Original signature : <code>int K2616_S70Decrement(HANDLE, BYTE, BYTE[4])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:92</i>
	 */
	int K2616_S70Decrement(HANDLE ComHandle, byte _Block, ByteBuffer _Data);
	/**
	 * Original signature : <code>int K2616_S70Halt(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:93</i>
	 */
	int K2616_S70Halt(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_ULDetectCard(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:94</i>
	 */
	int K2616_ULDetectCard(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_ULGetCardID(HANDLE, BYTE[7])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:95</i><br>
	 * @deprecated use the safer methods {@link #K2616_ULGetCardID(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_ULGetCardID(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ULGetCardID(HANDLE ComHandle, Pointer _CardID);
	/**
	 * Original signature : <code>int K2616_ULGetCardID(HANDLE, BYTE[7])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:95</i>
	 */
	int K2616_ULGetCardID(HANDLE ComHandle, ByteBuffer _CardID);
	/**
	 * Original signature : <code>int K2616_ULReadBlock(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:96</i><br>
	 * @deprecated use the safer methods {@link #K2616_ULReadBlock(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_ULReadBlock(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ULReadBlock(HANDLE ComHandle, byte _Block, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_ULReadBlock(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:96</i>
	 */
	int K2616_ULReadBlock(HANDLE ComHandle, byte _Block, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_ULWriteBlock(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:97</i><br>
	 * @deprecated use the safer methods {@link #K2616_ULWriteBlock(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_ULWriteBlock(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_ULWriteBlock(HANDLE ComHandle, byte _Block, Pointer _BlockData);
	/**
	 * Original signature : <code>int K2616_ULWriteBlock(HANDLE, BYTE, BYTE[16])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:97</i>
	 */
	int K2616_ULWriteBlock(HANDLE ComHandle, byte _Block, ByteBuffer _BlockData);
	/**
	 * Original signature : <code>int K2616_ULHalt(HANDLE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:98</i>
	 */
	int K2616_ULHalt(HANDLE ComHandle);
	/**
	 * Original signature : <code>int K2616_15693GetUid(HANDLE, BYTE[8])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:99</i><br>
	 * @deprecated use the safer methods {@link #K2616_15693GetUid(k2616_dll.K2616_DllLibrary.HANDLE, ByteBuffer)} and {@link #K2616_15693GetUid(k2616_dll.K2616_DllLibrary.HANDLE, Pointer)} instead
	 */
	@Deprecated 
	int K2616_15693GetUid(HANDLE ComHandle, Pointer UID);
	/**
	 * Original signature : <code>int K2616_15693GetUid(HANDLE, BYTE[8])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:99</i>
	 */
	int K2616_15693GetUid(HANDLE ComHandle, ByteBuffer UID);
	/**
	 * Original signature : <code>int K2616_15693ReadData(HANDLE, bool, BYTE[8], BYTE, BYTE, BYTE[], BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:100</i><br>
	 * @deprecated use the safer methods {@link #K2616_15693ReadData(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer, byte, byte, ByteBuffer, ByteBuffer)} and {@link #K2616_15693ReadData(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer, byte, byte, Pointer, Pointer)} instead
	 */
	@Deprecated 
	int K2616_15693ReadData(HANDLE ComHandle, byte bUid, Pointer Uid, byte BlockAddr, byte BlockLen, Pointer _BlockData, Pointer ReadBlockLen);
	/**
	 * Original signature : <code>int K2616_15693ReadData(HANDLE, bool, BYTE[8], BYTE, BYTE, BYTE[], BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:100</i>
	 */
	int K2616_15693ReadData(HANDLE ComHandle, byte bUid, ByteBuffer Uid, byte BlockAddr, byte BlockLen, ByteBuffer _BlockData, ByteBuffer ReadBlockLen);
	/**
	 * Original signature : <code>int K2616_15693WriteData(HANDLE, bool, BYTE[8], BYTE, BYTE, BYTE[], BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:101</i><br>
	 * @deprecated use the safer methods {@link #K2616_15693WriteData(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer, byte, byte, ByteBuffer, ByteBuffer)} and {@link #K2616_15693WriteData(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer, byte, byte, Pointer, Pointer)} instead
	 */
	@Deprecated 
	int K2616_15693WriteData(HANDLE ComHandle, byte bUid, Pointer Uid, byte BlockAddr, byte BlockLen, Pointer _BlockData, Pointer WriteBlockLen);
	/**
	 * Original signature : <code>int K2616_15693WriteData(HANDLE, bool, BYTE[8], BYTE, BYTE, BYTE[], BYTE*)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:101</i>
	 */
	int K2616_15693WriteData(HANDLE ComHandle, byte bUid, ByteBuffer Uid, byte BlockAddr, byte BlockLen, ByteBuffer _BlockData, ByteBuffer WriteBlockLen);
	/**
	 * Original signature : <code>int K2616_15693ChooseCard(HANDLE, bool, BYTE[8])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:102</i><br>
	 * @deprecated use the safer methods {@link #K2616_15693ChooseCard(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_15693ChooseCard(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_15693ChooseCard(HANDLE ComHandle, byte bUid, Pointer Uid);
	/**
	 * Original signature : <code>int K2616_15693ChooseCard(HANDLE, bool, BYTE[8])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:102</i>
	 */
	int K2616_15693ChooseCard(HANDLE ComHandle, byte bUid, ByteBuffer Uid);
	/**
	 * Original signature : <code>int K2616_15693GetMessage(HANDLE, bool, BYTE[8], BYTE[15])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:103</i><br>
	 * @deprecated use the safer methods {@link #K2616_15693GetMessage(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer, ByteBuffer)} and {@link #K2616_15693GetMessage(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer, Pointer)} instead
	 */
	@Deprecated 
	int K2616_15693GetMessage(HANDLE ComHandle, byte bUid, Pointer Uid, Pointer Message);
	/**
	 * Original signature : <code>int K2616_15693GetMessage(HANDLE, bool, BYTE[8], BYTE[15])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:103</i>
	 */
	int K2616_15693GetMessage(HANDLE ComHandle, byte bUid, ByteBuffer Uid, ByteBuffer Message);
	/**
	 * Original signature : <code>int K2616_15693ReadSafeBit(HANDLE, bool, BYTE[8], BYTE, BYTE, BYTE*, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:104</i><br>
	 * @deprecated use the safer methods {@link #K2616_15693ReadSafeBit(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer, byte, byte, ByteBuffer, ByteBuffer)} and {@link #K2616_15693ReadSafeBit(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer, byte, byte, Pointer, Pointer)} instead
	 */
	@Deprecated 
	int K2616_15693ReadSafeBit(HANDLE ComHandle, byte bUid, Pointer Uid, byte BlockAddr, byte BlockLen, Pointer ReadBlockLen, Pointer BlockLockStatus);
	/**
	 * Original signature : <code>int K2616_15693ReadSafeBit(HANDLE, bool, BYTE[8], BYTE, BYTE, BYTE*, BYTE[])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:104</i>
	 */
	int K2616_15693ReadSafeBit(HANDLE ComHandle, byte bUid, ByteBuffer Uid, byte BlockAddr, byte BlockLen, ByteBuffer ReadBlockLen, ByteBuffer BlockLockStatus);
	/**
	 * Original signature : <code>int K2616_15693WriteDSFID(HANDLE, bool, BYTE[8], BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:105</i><br>
	 * @deprecated use the safer methods {@link #K2616_15693WriteDSFID(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer, byte)} and {@link #K2616_15693WriteDSFID(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer, byte)} instead
	 */
	@Deprecated 
	int K2616_15693WriteDSFID(HANDLE ComHandle, byte bUid, Pointer Uid, byte WriteBit);
	/**
	 * Original signature : <code>int K2616_15693WriteDSFID(HANDLE, bool, BYTE[8], BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:105</i>
	 */
	int K2616_15693WriteDSFID(HANDLE ComHandle, byte bUid, ByteBuffer Uid, byte WriteBit);
	/**
	 * Original signature : <code>int K2616_15693WriteAFI(HANDLE, bool, BYTE[8], BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:106</i><br>
	 * @deprecated use the safer methods {@link #K2616_15693WriteAFI(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer, byte)} and {@link #K2616_15693WriteAFI(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer, byte)} instead
	 */
	@Deprecated 
	int K2616_15693WriteAFI(HANDLE ComHandle, byte bUid, Pointer Uid, byte WriteBit);
	/**
	 * Original signature : <code>int K2616_15693WriteAFI(HANDLE, bool, BYTE[8], BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:106</i>
	 */
	int K2616_15693WriteAFI(HANDLE ComHandle, byte bUid, ByteBuffer Uid, byte WriteBit);
	/**
	 * Original signature : <code>int K2616_15693LockBlock(HANDLE, bool, BYTE[8], BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:107</i><br>
	 * @deprecated use the safer methods {@link #K2616_15693LockBlock(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer, byte)} and {@link #K2616_15693LockBlock(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer, byte)} instead
	 */
	@Deprecated 
	int K2616_15693LockBlock(HANDLE ComHandle, byte bUid, Pointer Uid, byte LockAddress);
	/**
	 * Original signature : <code>int K2616_15693LockBlock(HANDLE, bool, BYTE[8], BYTE)</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:107</i>
	 */
	int K2616_15693LockBlock(HANDLE ComHandle, byte bUid, ByteBuffer Uid, byte LockAddress);
	/**
	 * Original signature : <code>int K2616_15693LockAFI(HANDLE, bool, BYTE[8])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:108</i><br>
	 * @deprecated use the safer methods {@link #K2616_15693LockAFI(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_15693LockAFI(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_15693LockAFI(HANDLE ComHandle, byte bUid, Pointer Uid);
	/**
	 * Original signature : <code>int K2616_15693LockAFI(HANDLE, bool, BYTE[8])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:108</i>
	 */
	int K2616_15693LockAFI(HANDLE ComHandle, byte bUid, ByteBuffer Uid);
	/**
	 * Original signature : <code>int K2616_15693LockDSFID(HANDLE, bool, BYTE[8])</code><br>
	 * <i>native declaration : drivers\card\K2616_Dll.h:109</i><br>
	 * @deprecated use the safer methods {@link #K2616_15693LockDSFID(k2616_dll.K2616_DllLibrary.HANDLE, byte, ByteBuffer)} and {@link #K2616_15693LockDSFID(k2616_dll.K2616_DllLibrary.HANDLE, byte, Pointer)} instead
	 */
	@Deprecated 
	int K2616_15693LockDSFID(HANDLE ComHandle, byte bUid, Pointer Uid);
